# BackUP

./: .gitignore  Cargo.toml  DESIGN.md  DESIGN_DELIVERY_SUMMARY.md  GETTING_STARTED.md  GUI_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  README.md  TECHNICAL_SPEC.md  diskspace_unix.go  diskspace_windows.go  go.mod  go.sum  importance_profile.json  main.go  open_unix.go  open_windows.go  priority_unix.go  priority_windows.go
.github/instructions/: codacy.instructions.md
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: checksums.rs  error.rs  fs_ops.rs  job.rs  lib.rs  model.rs  progress.rs
gui/: Cargo.toml
gui/src/: display_types.rs  main.rs  progress.rs  state.rs  worker.rs
