[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "transfer"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
uuid = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
