[package]
name = "gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }
iced = { version = "0.12", features = ["debug"] }
tokio = { version = "1.40", features = ["full"] }
crossbeam-channel = "0.5"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
